--- a/index.html
+++ b/index.html
@@ -15,27 +15,33 @@
         <img src="color-wheel.jpeg" alt="color wheel">
         <h2>Applying color to UI</h2>
         <p>In a Ui, color has a variety of roles:...</p>
-        <div class="bottom">
-          <p><a href="https://www.canva.com/colors/color-wheel/">Related link</a></p>
-          <p>&#8599;</p>
+        <div class="bottom-row">
+          <div class="bottom">
+            <p><a href="https://www.canva.com/colors/color-wheel/">Related link</a></p>
+            <p>&#8599;</p>
+          </div>
         </div>
       </div>
       <div class="card-two">
         <img src="quote-img.png" alt="quote">
         <h2>Imagery in UI</h2>
         <p>Imagery communicates an...</p>
-        <div class="bottom">
-          <p><a href="#">Related article</a></p>
-          <p>&#8599;</p>
+        <div class="bottom-row">
+          <div class="bottom">
+            <p><a href="#">Related article</a></p>
+            <p>&#8599;</p>
+          </div>
         </div>
       </div>
       <div class="card-three">
         <img src="color-wheel.jpeg" alt="color wheel">
         <h2>The color system</h2>
         <p>Create a color theme that reflects...</p>
-        <div class="bottom">
-          <p><a href="#">Related link</a></p>
-          <p>&#8599;</p>
+        <div class="bottom-row">
+          <div class="bottom">
+            <p><a href="#">Related link</a></p>
+            <p>&#8599;</p>
+          </div>
         </div>
       </div>
     </div>
